tests/fsharp/typecheck/sigs/neg33.bsl

neg33.fs(4,8,4,13): typecheck error FS0193: Module 'MyNS.File2' requires a value 'member File2.LSS.Bar: string -> int'
